# libscrob

./: .gitignore  CMakeLists.txt  README.md  main.c
include/: auth.h  authentication.h  client.h  libscrobbler.h  scrob.h  scrobble.h  xml.h
src/: api.c  api.h  auth.c  authentication.c  client.c  client_internal.h  md5.c  md5.h  scrob.c  scrobble.c  xml.c
